# gtk2-portal

./: Makefile.am  README.md  a.portal  configure.ac  filechooser.c  portal.c
